# mock_models

./: README.md
model-a/: pyproject.toml
model-a/model_a/: __init__.py
model-b/: pyproject.toml
model-c/: pyproject.toml
model-c/model_c/: __init__.py  model.py
models/model-a/: README.md  pyproject.toml
models/model-a/model_a/: model.py
models/model-a/tests/: tests_model.py
models/model-b/: README.md  pyproject.toml
models/model-b/tests/: tests_model.py
models/model-c/: README.md  pyproject.toml
models/model-c/tests/: tests_model.py
models/model_a/: README.md  pyproject.toml
models/model_a/tests/: tests_model.py
models/model_b/: README.md  pyproject.toml
models/model_b/src/model_b/: __init__.py  model.py
models/model_b/tests/: tests_model.py
models/model_c/: README.md  pyproject.toml
models/model_c/tests/: tests_model.py
