[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-model-c"
version = "0.1.0"
description = "Brand-based pricing model"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name="Mladen Nikolić"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
mypy = "^1.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]